// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Disabled, rendering 1`] = `
.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  background-color: transparent;
  border-radius: 4px;
  border-width: 1px;
  border-style: solid;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  box-shadow: 0 0 0 0 undefined;
}

.c2::-webkit-input-placeholder {
  color: #f9f9fa#ebeeef#dde1e4#cdd4d8#bcc5cb#a9b5bc#93a2ab#7a8c97#606e77#384046;
}

.c2::-moz-placeholder {
  color: #f9f9fa#ebeeef#dde1e4#cdd4d8#bcc5cb#a9b5bc#93a2ab#7a8c97#606e77#384046;
}

.c2:-ms-input-placeholder {
  color: #f9f9fa#ebeeef#dde1e4#cdd4d8#bcc5cb#a9b5bc#93a2ab#7a8c97#606e77#384046;
}

.c2::placeholder {
  color: #f9f9fa#ebeeef#dde1e4#cdd4d8#bcc5cb#a9b5bc#93a2ab#7a8c97#606e77#384046;
}

.c2::-ms-clear {
  display: none;
}

.c2:focus {
  outline: 0;
  border-color: #e6f4fc,#cce7f8,#add9f5,#8bc9f0,#62b6eb,#2d9ee4,#298fce,#247db4,#1d6795,#154a6b;
  box-shadow: 0 0 0 1px #e6f4fc,#cce7f8,#add9f5,#8bc9f0,#62b6eb,#2d9ee4,#298fce,#247db4,#1d6795,#154a6b;
}

.c1 {
  border-style: none;
  display: inline;
}

.c1:focus {
  box-shadow: none;
}

.c1:checked ~ svg {
  color: #e6f4fc#cce7f8#add9f5#8bc9f0#62b6eb#2d9ee4#298fce#247db4#1d6795#154a6b;
}

.c0 {
  font-family: Averta,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  line-height: 1.4;
}

.c0 * {
  box-sizing: border-box;
}

<div
  className="c0"
>
  <span
    checked={undefined}
    className=""
    disabled={true}
  >
    <input
      className="c1 c2"
      disabled={true}
      id="radio-input"
      type="radio"
    />
    <svg
      className="c3"
      fill="currentcolor"
      height={24}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z "
      />
    </svg>
  </span>
</div>
`;

exports[`Radio Not Selected, rendering 1`] = `
.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  background-color: transparent;
  border-radius: 4px;
  border-width: 1px;
  border-style: solid;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  box-shadow: 0 0 0 0 undefined;
}

.c3::-webkit-input-placeholder {
  color: #f9f9fa#ebeeef#dde1e4#cdd4d8#bcc5cb#a9b5bc#93a2ab#7a8c97#606e77#384046;
}

.c3::-moz-placeholder {
  color: #f9f9fa#ebeeef#dde1e4#cdd4d8#bcc5cb#a9b5bc#93a2ab#7a8c97#606e77#384046;
}

.c3:-ms-input-placeholder {
  color: #f9f9fa#ebeeef#dde1e4#cdd4d8#bcc5cb#a9b5bc#93a2ab#7a8c97#606e77#384046;
}

.c3::placeholder {
  color: #f9f9fa#ebeeef#dde1e4#cdd4d8#bcc5cb#a9b5bc#93a2ab#7a8c97#606e77#384046;
}

.c3::-ms-clear {
  display: none;
}

.c3:focus {
  outline: 0;
  border-color: #e6f4fc,#cce7f8,#add9f5,#8bc9f0,#62b6eb,#2d9ee4,#298fce,#247db4,#1d6795,#154a6b;
  box-shadow: 0 0 0 1px #e6f4fc,#cce7f8,#add9f5,#8bc9f0,#62b6eb,#2d9ee4,#298fce,#247db4,#1d6795,#154a6b;
}

.c1:hover {
  color: #e6f4fc,#cce7f8,#add9f5,#8bc9f0,#62b6eb,#2d9ee4,#298fce,#247db4,#1d6795,#154a6b;
}

.c2 {
  border-style: none;
  display: inline;
}

.c2:focus {
  box-shadow: none;
}

.c2:checked ~ svg {
  color: #e6f4fc#cce7f8#add9f5#8bc9f0#62b6eb#2d9ee4#298fce#247db4#1d6795#154a6b;
}

.c0 {
  font-family: Averta,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  line-height: 1.4;
}

.c0 * {
  box-sizing: border-box;
}

<div
  className="c0"
>
  <span
    checked={undefined}
    className="c1"
    disabled={undefined}
  >
    <input
      className="c2 c3"
      id="radio-input"
      type="radio"
    />
    <svg
      className="c4"
      fill="currentcolor"
      height={24}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z "
      />
    </svg>
  </span>
</div>
`;

exports[`Radio Selected, rendering 1`] = `
.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  background-color: transparent;
  border-radius: 4px;
  border-width: 1px;
  border-style: solid;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  box-shadow: 0 0 0 0 undefined;
}

.c2::-webkit-input-placeholder {
  color: #f9f9fa#ebeeef#dde1e4#cdd4d8#bcc5cb#a9b5bc#93a2ab#7a8c97#606e77#384046;
}

.c2::-moz-placeholder {
  color: #f9f9fa#ebeeef#dde1e4#cdd4d8#bcc5cb#a9b5bc#93a2ab#7a8c97#606e77#384046;
}

.c2:-ms-input-placeholder {
  color: #f9f9fa#ebeeef#dde1e4#cdd4d8#bcc5cb#a9b5bc#93a2ab#7a8c97#606e77#384046;
}

.c2::placeholder {
  color: #f9f9fa#ebeeef#dde1e4#cdd4d8#bcc5cb#a9b5bc#93a2ab#7a8c97#606e77#384046;
}

.c2::-ms-clear {
  display: none;
}

.c2:focus {
  outline: 0;
  border-color: #e6f4fc,#cce7f8,#add9f5,#8bc9f0,#62b6eb,#2d9ee4,#298fce,#247db4,#1d6795,#154a6b;
  box-shadow: 0 0 0 1px #e6f4fc,#cce7f8,#add9f5,#8bc9f0,#62b6eb,#2d9ee4,#298fce,#247db4,#1d6795,#154a6b;
}

.c1 {
  border-style: none;
  display: inline;
}

.c1:focus {
  box-shadow: none;
}

.c1:checked ~ svg {
  color: #e6f4fc#cce7f8#add9f5#8bc9f0#62b6eb#2d9ee4#298fce#247db4#1d6795#154a6b;
}

.c0 {
  font-family: Averta,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  line-height: 1.4;
}

.c0 * {
  box-sizing: border-box;
}

<div
  className="c0"
>
  <span
    checked={true}
    className=""
    disabled={undefined}
  >
    <input
      checked={true}
      className="c1 c2"
      id="radio-input"
      type="radio"
    />
    <svg
      className="c3"
      fill="currentcolor"
      height={24}
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z "
      />
    </svg>
  </span>
</div>
`;
